# Lab1Cpp

./: .gitignore
Lab1Cpp/: CMakeLists.txt  DataClass.cpp  DataClass.h  Knn.cpp  Knn.h  KnnAlgorithm.cpp  KnnAlgorithm.h  Lab1Cpp.vcxproj  Lab1Cpp.vcxproj.filters  LoadCSV.cpp  LoadCSV.h  Main.cpp  Preprocessing.cpp  Preprocessing.h  a.out  example-scatter  main  makefile
